--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,17 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/tipsyDancer.js"></script>
+    <script src="src/inflatableDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeTipsyDancer">add a tipsy dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeInflatableDancer">add an inflatable dancer</a>
+      <a href="#" class="lineup-button">line-up!!</a>
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
