add orbital dancer
* Orbital dancers move towards other dancers!
* Give our dancers a star field to dance on
* Transmogrify dancers on hover

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,6 +8,7 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/tipsyDancer.js"></script>
     <script src="src/inflatableDancer.js"></script>
+    <script src="src/orbitalDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
@@ -15,6 +16,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeTipsyDancer">add a tipsy dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeInflatableDancer">add an inflatable dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeOrbitalDancer">add an orbital dancer</a>
       <a href="#" class="lineup-button">line-up!!</a>
     </div>
     <script src="src/init.js"></script>
