replace dancers with icons, make things pretty
* Add test cases
* change font
* update colors
* replace spans with images

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Object Dance Party</title>
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
@@ -13,11 +14,12 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeTipsyDancer">add a tipsy dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeInflatableDancer">add an inflatable dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeOrbitalDancer">add an orbital dancer</a>
-      <a href="#" class="lineup-button">line-up!!</a>
+      <a href="#" class="lineup-button">LINE-UP</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">+blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeTipsyDancer">+tipsy dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeInflatableDancer">+inflatable dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeOrbitalDancer">+orbital dancer</a>
+
     </div>
     <script src="src/init.js"></script>
   </body>
