--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -19,6 +19,10 @@
   <script src="spec/blinkyDancerSpec.js"></script>
   <script src="src/tipsyDancer.js"></script>
   <script src="spec/tipsyDancerSpec.js"></script>
+  <script src="src/inflatableDancer.js"></script>
+  <script src="spec/inflatableDancerSpec.js"></script>
+  <script src="src/orbitalDancer.js"></script>
+  <script src="spec/orbitalDancerSpec.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
