update to ES6 classes

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -15,10 +15,10 @@
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="lineup-button">LINE-UP</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">+blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeTipsyDancer">+tipsy dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeInflatableDancer">+inflatable dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeOrbitalDancer">+orbital dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">+blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="TipsyDancer">+tipsy dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="InflatableDancer">+inflatable dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="OrbitalDancer">+orbital dancer</a>
 
     </div>
     <script src="src/init.js"></script>
