Add rotate animations and audio tag

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -19,7 +19,9 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="TipsyDancer">+tipsy dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="InflatableDancer">+inflatable dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="OrbitalDancer">+orbital dancer</a>
-
+      <audio controls="controls">
+        <source src="assets/Kevin_MacLeod_-_Richard_Strauss_Also_Sprach_Zarathustra.mp3" type="audio/mp3">
+      </audio>
     </div>
     <script src="src/init.js"></script>
   </body>
